[build-system]
requires = [
    "packaging",
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff -n auto"
testpaths = ["tests"]
filterwarnings = [
    "error::numpy.VisibleDeprecationWarning",
    "error::DeprecationWarning",
]