[metadata]
name = EXFOR_chart
version = 0.1.0
author = Anatoli Fedynitch
maintainer_email = afedynitch@gmail.com
description= Interactive visulaization of photo-nuclear cross sections
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/impy-project/chromo
download_url = https://pypi.python.org/pypi/chromo
classifiers =
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics
        Intended Audience :: Science/Research
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    x4i3
    periodictable
    numpy
    matplotlib

[flake8]
max-line-length = 90
extend-ignore = E203

[pydocstyle]
convention = numpy
